# ArgusEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stats.json  vcpkg.json
engine/: CMakeLists.txt
engine/include/: ArgusEngine.hpp
engine/include/core/: CommandBuffer.hpp  Engine.hpp  EventSystem.hpp  TileSparesSet.hpp  Timer.hpp  Types.hpp  World.hpp
engine/include/jobSystem/: JobSystem.hpp
engine/include/memory/: Chunk.hpp  FastIndexLinearAllocator.hpp  Handle.hpp  LinearAllocator.hpp  Map.hpp  Pair.hpp  PoolAllocator.hpp  Registry.hpp  View.hpp  VirtualLinearAllocator.hpp
engine/include/resources/: MaterialManager.hpp  ModelManager.hpp  TextureManager.hpp
engine/include/utils/: TileFixedPoint.hpp  Utils.hpp
engine/src/: ArgusEngine.cpp
engine/src/core/: CommandBuffer.cpp  Engine.cpp  EventSystem.cpp  World.cpp
engine/src/resources/: MaterialManager.cpp  ModelManager.cpp  TextureManager.cpp
engine/src/systems/: GpuBufferManager.cpp
examples/: CMakeLists.txt
examples/agstest/: CMakeLists.txt  agstest.cpp
modules/: CMakeLists.txt
modules/include/: DebugUI.hpp  Render.hpp
modules/include/utils/: Physics.hpp
modules/src/: Render.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_chunk.cpp  test_map.cpp
tools/: CMakeLists.txt  converter.cpp
